# spam_detection

./: .devcontainer.json  README  pyproject.toml  requirements.txt
models/: spam_naive_bayes_model.pkl
notebooks/: data_preprocessing.ipynb  naive_bayes_fc212007.ipynb
notebooks/FC212007_Nishadi Wickramaarachchi/: naive_byes.ipynb
notebooks/FC212033-Naveena/: SVM_Spam_Detector-old.ipynb  svm_model.py
notebooks/FC212037_Amandi Thathsarani/: EDA_LR.ipynb  EDA_Logistic_Regression.ipynb  LR1.ipynb  LogisticRegression.ipynb  spam_model.pkl
src/: train.py
