[project]
name = "spam_detector"
version = "3.11.2"
description = "A machine learning system that classifies emails as spam or not spam (ham) using NLP (Natural Language Processing) and classification algorithms. The model processes email text content, extracts features (e.g., word frequencies, TF-IDF), and predicts whether an email is spam with high accuracy."
authors = [
    {name = "Active", email = "nuhansahk@gmail.com"}
]
requires-python = ">=3.9"
